--- a/franske-course-information/modules/itc-2300/pages/lab-asterisk-pjsipconf.adoc
+++ b/franske-course-information/modules/itc-2300/pages/lab-asterisk-pjsipconf.adoc
@@ -9,7 +9,7 @@ Don't forget to modify for the information specific to your Pod:
 * Change the MAC addresses of the phones to match your phones
 * Change the descriptions, line names, caller ID names, etc.
 
-== Example Minimal sccp.conf File Changes
+== Example Minimal pjsip.conf File Changes
 
 ----
 [simpletrans]
